# glmstar

./: .gitignore  .gitmodules  README.md  meson.build  pyproject.toml
.github/workflows/: build_and_test.yml  build_docs.yml  build_wheels.yml  compare_R.yml  full_test.yml
docs/: _toc.yml  input_data_rationale.md  quick_start.md  requirements.txt
docs/paths/: LogNet.md
glmnet/: __init__.py  _bootstrap.py  _utils.py  base.py  cox.py  data.py  elnet.py  glm.py  glmnet.py  inference.py  irls.py  regularized_glm.py
glmnet/paths/: fastnet.py  fishnet.py  gaussnet.py  lognet.py  multiclassnet.py  multigaussnet.py
tests/: commonR.py  conftest.py  test_count_data.py  test_design.py  test_elnet_penalty.py  test_elnet_ridge.py  test_inference.py  test_regularized_glm.py
tests/compare_R/: test_coxnet_r_comparison.py  test_fishnet_r_comparison.py  test_gaussnet_r_comparison.py  test_lognet_r_comparison.py  test_multiclass_r_comparison.py  test_multigauss_r_comparison.py  test_probit_r_comparison.py
tests/flex/: common.py  conftest.py  test_cox.py  test_gaussnet.py  test_logistic.py  test_probit.py
tests/glm/: test_grad.py  test_ridge.py
tests/paths/: conftest.py  test_fishnet.py  test_gaussnet.py  test_lognet.py  test_multiclassnet.py  test_multigaussnet.py
tests/sparse/: test_fishnet.py  test_gaussnet.py  test_gaussnet_flex.py  test_lognet.py  test_multiclassnet.py  test_multigaussnet.py
