[project]
name = "glmnet"
dynamic = ["version"]
authors = [
  {name="Naras Balasubrimanian", email="naras@stanford.edu"},
  {name="Trevor Hastie", email="hastie@stanford.edu"},
  {name="Jonathan Taylor", email="jonathan.taylor@stanford.edu"},
  {name="James Yang", email="jamesyang916@gmail.com"}
]
description = "GlmNet for Python"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["statistical learning", "glm", "regularization", "lasso", "elastic net"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn>=1.2",
    "joblib",
    "statsmodels>=0.13",
    "coxdev>=0.1.6",
    "tqdm",
    "mpmath"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scipy",
    "ninja",
    "meson",
    "meson-python",
    "pybind11",
    "setuptools_scm"
]
doc = [
    "myst-parser",
    "jupyter-book",
    "pandas",
    "matplotlib",
    "rpy2"
]
test = ["pytest",
        "rpy2",
        "pandas",
	"matplotlib"
	]

[build-system]
requires = ["meson-python>=0.13.1", "pybind11", "ninja", "patchelf; platform_system == 'Linux'", "setuptools_scm"]
build-backend = "mesonpy"

[tool.uv.extra-build-dependencies]
glmnet = ["meson-python",
          "pybind11",
	  "setuptools_scm",
	  "ninja"]